--- a/frontend/templates/user-profile.html
+++ b/frontend/templates/user-profile.html
@@ -482,7 +482,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item main">
                     <div class="label">Total Value</div>
-                    <div class="value-large" id="total-value">{{ portfolio.total_portfolio_value }}$</div>
+                    <div class="value-large" id="total-value">{{ portfolio.total_portfolio_value_display }}$</div>
                 </div>
                 <div class="portfolio-item">
                     <div class="label">Available Cash</div>
