--- a/frontend/templates/user-profile.html
+++ b/frontend/templates/user-profile.html
@@ -573,8 +573,8 @@
                         <div class="mb-3">
                             <label class="form-label">Quantity</label>
                             <input type="number" class="form-control" name="quantity" placeholder="0.00" step="0.01" required> <!-- ⚠️ -->
-                            <div class="fs-5 fw-bold">
-                                <small class="text-warning">Total: <span id="totalAmount" >0.00$</span></small>
+                            <div class="mt-3">
+                                <small class="text-warning">Total: <span id="totalAmount" class="fs-5 fw-bold">0.00$</span></small>
                             </div>
                         </div>
 
